--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                     <li data-aos="fade-left"
                     data-aos-duration="2000"><a href="#service-area" aria-hidden="true">Serviços</a></li>
                     <li data-aos="fade-left"
-                    data-aos-duration="3000"><a href="#works" aria-hidden="true">Social Media</a></li>
+                    data-aos-duration="3000"><a href="#works" aria-hidden="true">Trabalhos</a></li>
                     <li data-aos="fade-left"
                     data-aos-duration="4000"><a href="#client-side" aria-hidden="true">Logofolio</a></li>
                     <li data-aos="fade-left"
-                    data-aos-duration="5000"><a href="#contact-area" aria-hidden="true">Orçamento</a></li>
+                    data-aos-duration="5000"><a href="#contact-area" aria-hidden="true">Contratar</a></li>
                 </ol>
                 <ul class="nav-list-social">
                     <li>
@@ -158,46 +158,62 @@
             <h1 class="main-title" data-aos="fade-up"
             data-aos-duration="1000">Social Media<span>.</span></h1>
             <div class="containerMax">
-                <div class="project-body" data-aos="fade-up"
+                <a href="vendor/image/sc01.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
                 data-aos-duration="1090">
                     <div class="project-image">
                     </div>
-                </div>
-                <div class="project-body" data-aos="fade-up"
+                </a>
+                <a href="vendor/image/sc02.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
                 data-aos-duration="2000">
                     <div class="project-image">
                     </div>
-                </div>
-                <div class="project-body" data-aos="fade-up"
+                </a>
+                <a href="vendor/image/sc03.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
                 data-aos-duration="2090">
                     <div class="project-image"></div>
-                </div>
-                <div class="project-body" data-aos="fade-up"
+                </a>
+                <a href="vendor/image/sc04.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
                 data-aos-duration="3000">
                     <div class="project-image"></div>
-                </div>
-                <div class="project-body" data-aos="fade-up"
+                </a>
+                <a href="vendor/image/sc05.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
                 data-aos-duration="3090">
                     <div class="project-image"></div>
-                </div>
-                <div class="project-body" data-aos="fade-up"
+                </a>
+                <a href="vendor/image/sc06.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
                 data-aos-duration="4000">
                     <div class="project-image"></div>
-                </div>
-                <div class="project-body" data-aos="fade-up"
+                </a>
+                <a href="vendor/image/sc07.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
                 data-aos-duration="4090">
                     <div class="project-image"></div>
-                </div>
-                <div class="project-body" data-aos="fade-up"
+                </a>
+                <a href="vendor/image/sc08.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
                 data-aos-duration="5000">
                     <div class="project-image"></div>
-                </div>
+                </a>
+                <a href="vendor/image/sc09.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
+                data-aos-duration="5000">
+                    <div class="project-image"></div>
+                </a>
+                <a href="vendor/image/sc10.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
+                data-aos-duration="5000">
+                    <div class="project-image"></div>
+                </a>
+                <a href="vendor/image/sc11.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
+                data-aos-duration="5000">
+                    <div class="project-image"></div>
+                </a>
+                <a href="vendor/image/sc12.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
+                data-aos-duration="5000">
+                    <div class="project-image"></div>
+                </a>
             </div>
         </section>
         <!--Client side-->
         <section id="client-side">
             <h1 class="main-title" data-aos="fade-up"
-            data-aos-duration="1000"><i>Logo<b>folio</b></i><span>.</span></h1>
+            data-aos-duration="1000">Logofolio<span>.</span></h1>
             <div class="containerMax">
                 <div class="boxClientSide"  data-aos="fade-up" data-aos-duration="1000">
                     <img src="vendor/client/pandula.png" alt="pandula" class="logoClient">
@@ -260,22 +276,19 @@
         </div>
         <footer>
             <!--contato-->
-            <div id="contact-area" data-aos="fade-left"
-            data-aos-duration="1000">
+            <div id="contact-area" data-aos="fade-left"data-aos-duration="1000">
                 <div class="col-12">
-                    <h1 class="main-title" data-aos="fade-left"
-            data-aos-duration="3000">
-                        Solicitar Orçamento<span>.</span>
+                    <h1 class="main-title" data-aos="fade-left" data-aos-duration="3000">
+                     CONTRATA-ME<span>.</span>
                     </h1>
                 </div>
                 <P>
                     Minha caixa de entrada está sempre aberta. Se você tem uma ideia ou querendo desenvolver uma, estarei do outro lado respondendo suas mensagens!
                 </P>
-                <div class="btn-links-project arquivo" data-aos="fade-left"
-                data-aos-duration="1000">
+                <div class="btn-links-project arquivo" data-aos="fade-left" data-aos-duration="1000">
                     <div class="btn-malito">
                         <a href="https://wa.me/+244933005827" target="_blank">
-                            Orçamento
+                            PROPOSTA
                         </a>
                     </div>
                 </div>
@@ -312,6 +325,10 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!--Fancybox-->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
     <script>
         var typed = new Typed(".auto-type", {
             strings: ["HTML", "css", "javascript", "python", "Bootstrap", "git", "github"],
