--- a/index.html
+++ b/index.html
@@ -29,19 +29,17 @@
             <div id="menu-toggle" class="nav-list" data-visible="false">
                 <ol class="nav-ol-list">
                     <li data-aos="fade-left"
-                    data-aos-duration="1000"><a href="#main" aria-hidden="true" id="#main">Sobre</a></li>
+                    data-aos-duration="1000"><a href="#main" aria-hidden="true" id="#main">SOBRE</a></li>
                     <li data-aos="fade-left"
-                    data-aos-duration="2000"><a href="#service-area" aria-hidden="true">Serviços</a></li>
+                    data-aos-duration="2000"><a href="#service-area" aria-hidden="true">SERVIÇOS</a></li>
                     <li data-aos="fade-left"
-                    data-aos-duration="3000"><a href="#works" aria-hidden="true">Trabalhos</a></li>
+                    data-aos-duration="3000"><a href="#works" aria-hidden="true">TRABALHOS</a></li>
                     <li data-aos="fade-left"
-                    data-aos-duration="4000"><a href="#client-side" aria-hidden="true">Logofolio</a></li>
-                    <li data-aos="fade-left"
-                    data-aos-duration="5000"><a href="#contact-area" aria-hidden="true">Contratar</a></li>
+                    data-aos-duration="4000"><a href="#contact-area" aria-hidden="true">CONTATO</a></li>
                 </ol>
                 <ul class="nav-list-social">
                     <li>
-                        <a href="https://www.facebook.com/@magosamuca" target="_blank">
+                        <a href="https://www.facebook.com/samucacreationss/" target="_blank">
                             <i class="fab fa-facebook-f"></i>
                             <span><i class="fab fa-facebook-f"></i></span>
                         </a>
@@ -53,7 +51,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.behance.net/magosamuca" target="_blank">
+                        <a href="https://www.behance.net/samucacreationss" target="_blank">
                             <i class="fab fa-behance"></i>
                             <span><i class="fab fa-behance"></i></span>
                         </a>
@@ -99,16 +97,16 @@
         <!--Serviços-->
         <section id="service-area">
             <h1 class="main-title" data-aos="fade-up"
-            data-aos-duration="1000">Artista Digital<span>.</span></h1>
+            data-aos-duration="1000">Serviços<span>.</span></h1>
             <div class="containerMax">
                 <div class="box-service" data-aos="fade-up"
                 data-aos-duration="2000">
                     <div class="head-box">
                         <lord-icon
-                            src="https://cdn.lordicon.com/wloilxuq.json"
+                            src="https://cdn.lordicon.com/ppsqwkvn.json"
                             trigger="loop"
                             colors="primary:#ffffff,secondary:#EBEB00"
-                            style="width:75px;height:75px">
+                            style="width:70px;height:70px">
                         </lord-icon>
                         <h1 class="title-project">BRAND DESIGN</h1>
                     </div>
@@ -120,27 +118,27 @@
                 data-aos-duration="3000">
                     <div class="head-box">
                         <lord-icon
-                            src="https://cdn.lordicon.com/uqpazftn.json"
+                            src="https://cdn.lordicon.com/wuvorxbv.json"
                             trigger="loop"
                             colors="primary:#ffffff,secondary:#EBEB00"
                             style="width:75px;height:75px">
                         </lord-icon>
-                        <h1 class="title-project">GERENCIAMENTO DE MÍDIA SOCIAL</h1>
+                        <h1 class="title-project">SOCIAL MEDIA</h1>
                     </div>
-                    <p>Uma gestão envolvente, planejado e com conteúdo estrategicamente personalizado para o seu público alvo.</p>
+                    <p>Artes visualmente atraentes que cativam e aumentam seu engajamento, alinhando-se à sua marca para garantir uma imagem profissional.</p>
                 </div>
                 <div class="box-service" data-aos="fade-up"
                 data-aos-duration="4000">
                     <div class="head-box">
                         <lord-icon
-                            src="https://cdn.lordicon.com/vixtkkbk.json"
+                            src="https://cdn.lordicon.com/lwvaowvp.json"
                             trigger="loop"
-                            colors="primary:#EBEB00,secondary:#e4e4e4"
-                            style="width:75px;height:75px">
+                            colors="primary:#ffffff,secondary:#EBEB00"
+                            style="width:75px;height: 75px;">
                         </lord-icon>
-                        <h1 class="title-project">FOTOGRÁFIA</h1>
+                        <h1 class="title-project">MOTION DESIGNER</h1>
                     </div>
-                    <P>A fotográfia é um gatilho nostálgico, eternize os melhores momentos da sua vida. Qualidade que sobra pra guardar no bolso.</P>
+                    <P>Potencialize os seus resultados explorando a magia da animaçao e dar vida a sua marca</P>
                 </div>
             </div>
         </section>
@@ -156,23 +154,23 @@
         <!--projetos-->
         <section id="works">
             <h1 class="main-title" data-aos="fade-up"
-            data-aos-duration="1000">Social Media<span>.</span></h1>
+            data-aos-duration="1000">Projetos<span>.</span></h1>
             <div class="containerMax">
-                <a href="vendor/image/sc01.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
+                <a href="vendor/image/mucua.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
                 data-aos-duration="1090">
                     <div class="project-image">
                     </div>
                 </a>
-                <a href="vendor/image/sc02.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
+                <a href="vendor/image/iogurte.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
                 data-aos-duration="2000">
                     <div class="project-image">
                     </div>
                 </a>
-                <a href="vendor/image/sc03.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
+                <a href="vendor/image/travel.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
                 data-aos-duration="2090">
                     <div class="project-image"></div>
                 </a>
-                <a href="vendor/image/sc04.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
+                <a href="vendor/image/market.jpg" data-fancybox="gallery" class="project-body" data-aos="fade-up"
                 data-aos-duration="3000">
                     <div class="project-image"></div>
                 </a>
@@ -188,7 +186,7 @@
                 data-aos-duration="4090">
                     <div class="project-image"></div>
                 </a>
-                <a href="vendor/image/sc08.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
+                <a href="vendor/image/sc10.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
                 data-aos-duration="5000">
                     <div class="project-image"></div>
                 </a>
@@ -196,7 +194,7 @@
                 data-aos-duration="5000">
                     <div class="project-image"></div>
                 </a>
-                <a href="vendor/image/sc10.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
+                <a href="vendor/image/nectar.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
                 data-aos-duration="5000">
                     <div class="project-image"></div>
                 </a>
@@ -208,10 +206,58 @@
                 data-aos-duration="5000">
                     <div class="project-image"></div>
                 </a>
+                <a href="vendor/image/yaki.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
+                data-aos-duration="5000">
+                    <div class="project-image"></div>
+                </a>
+                <a href="vendor/image/zapfibra.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
+                data-aos-duration="5000">
+                    <div class="project-image"></div>
+                </a>
+                <a href="vendor/image/gameadv.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
+                data-aos-duration="5000">
+                    <div class="project-image"></div>
+                </a>
+                <a href="vendor/image/baskett.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
+                data-aos-duration="5000">
+                    <div class="project-image"></div>
+                </a>
+                <a href="vendor/image/control.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
+                data-aos-duration="5000">
+                    <div class="project-image"></div>
+                </a>
+                <a href="vendor/image/itambe.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
+                data-aos-duration="5000">
+                    <div class="project-image"></div>
+                </a>
+                <a href="vendor/image/sdflayer.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
+                data-aos-duration="5000">
+                    <div class="project-image"></div>
+                </a>
+                <a href="vendor/image/spazio.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
+                data-aos-duration="5000">
+                    <div class="project-image"></div>
+                </a>
+                <a href="vendor/image/queenpink.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
+                data-aos-duration="5000">
+                    <div class="project-image"></div>
+                </a>
+                <a href="vendor/image/pequenosmarotos.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
+                data-aos-duration="5000">
+                    <div class="project-image"></div>
+                </a>
+                <a href="vendor/image/luda.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
+                data-aos-duration="5000">
+                    <div class="project-image"></div>
+                </a>
+                <a href="vendor/image/hennessey.png" data-fancybox="gallery" class="project-body" data-aos="fade-up"
+                data-aos-duration="5000">
+                    <div class="project-image"></div>
+                </a>
             </div>
         </section>
         <!--Client side-->
-        <section id="client-side">
+        <!--<section id="client-side">
             <h1 class="main-title" data-aos="fade-up"
             data-aos-duration="1000">Logofolio<span>.</span></h1>
             <div class="containerMax">
@@ -270,7 +316,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section>-->
         <div class="myemail">
             <a href="mailto:samucacreations@gmail.com">samucacreations@gmail.com</a>
         </div>
@@ -279,7 +325,7 @@
             <div id="contact-area" data-aos="fade-left"data-aos-duration="1000">
                 <div class="col-12">
                     <h1 class="main-title" data-aos="fade-left" data-aos-duration="3000">
-                     CONTRATA-ME<span>.</span>
+                     Contato<span>.</span>
                     </h1>
                 </div>
                 <P>
@@ -288,7 +334,7 @@
                 <div class="btn-links-project arquivo" data-aos="fade-left" data-aos-duration="1000">
                     <div class="btn-malito">
                         <a href="https://wa.me/+244933005827" target="_blank">
-                            PROPOSTA
+                           Conversar
                         </a>
                     </div>
                 </div>
@@ -314,9 +360,9 @@
                 </li>
             </ul> 
             <div class="rodape-layout">
-                <p>© 2023 samucacreations.com</p>
+                <p>©2023 <span>samucacreations.com</span>. Todos os direitos reservados</p>
                 <div>
-                    <p>Powered by Samuca</p>
+                    <p>Powered by Samuca Creations</p>
                 </div>
             </div>
         </footer>
